security config fix